# ADN-Install

./: .gitignore  README.md  deploy.conf.example  docker-install.sh  install.sh  pyproject.toml
config/schemas/: adn-monitor-arrays.yaml
install/: README.md  install.sh
install-docker/: README.md  deploy.conf.example
install-docker/compose/: compose.registry.yml
install-docker/compose/traefik/: ssl.override.yml.in  traefik.http.yml.in  traefik.https.yml.in
install-docker/lib/: compose-env.sh  docker-tag.sh
install-docker/scripts/: bootstrap-standalone.sh  install-docker-debian.sh  install-standalone.sh  materialize-standalone.sh
install/scripts/: bootstrap_os.sh  bootstrap_pyenv.sh  clean-all.sh  run_pyenv_bootstrap.sh
plugins/: adn-echo.yaml  adn-monitor.yaml  adn-server.yaml  adn-web.yaml  daprs.yaml  os-base.yaml  pyenv.yaml  ufw.yaml
sbin/: adn-deploy
scripts/: bootstrap_os.sh  bootstrap_pyenv.sh  run_pyenv_bootstrap.sh
src/adn_deploy/: __init__.py  __main__.py  cli.py
src/adn_deploy/application/: __init__.py  config.py  config_arrays.py  config_schema.py  doctor.py  install.py  plugin_cmd.py  preflight.py  reference.py  update.py  users.py  web.py
src/adn_deploy/core/: __init__.py  env.py  paths.py  (+1 more)
templates/: deploy.conf.example
templates/config/: deploy-overrides.yaml
templates/daprs/: gps_data.cfg.in
templates/letsencrypt/: renew-hook.sh.in
templates/logrotate/: adn-server.in
templates/nginx/: adn-monitor.conf.in
templates/systemd/: adn-echo.service.in  adn-monitor.service.in  adn-server.service.in  daprs.service.in
(+26 files in other folders)
