[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adn-deploy"
version = "2.0.0"
description = "ADN bare-metal installer and admin toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "textual>=0.80",
  "ruamel.yaml>=0.18",
  "PyYAML>=6.0",
  "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
adn-deploy = "adn_deploy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
